# syncdoc

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Justfile  README.md
examples/demo_cfg_attr_call/: Cargo.toml  README.md
examples/demo_cfg_attr_call/docs/TimeOfDay/: Day.md
examples/demo_cfg_attr_call/src/: lib.rs  main.rs
examples/demo_cfg_attr_toml/: Cargo.toml  README.md
examples/demo_cfg_attr_toml/docs/: lib.md
examples/demo_cfg_attr_toml/docs/TimeOfDay/: Night.md
examples/demo_cfg_attr_toml/src/: main.rs
syncdoc/: CHANGELOG.md  Cargo.toml  README.md
syncdoc-core/: CHANGELOG.md  Cargo.toml  README.md
syncdoc-core/src/: config.rs  debug.rs  doc_injector.rs  lib.rs  omnibus.rs  parse.rs  path_utils.rs  token_processors.rs
syncdoc-core/src/parse/: tests.rs
syncdoc-core/src/tests/: parse.rs  tok_proc.rs
syncdoc-core/src/token_processors/: tests.rs  tok_proc_tests.rs
syncdoc-core/tests/: basic.rs  doc_injector_tests.rs  helpers.rs  negative.rs  patterns.rs  token_processors_test.rs
syncdoc-core/tests/helpers/: docs.rs  formatting.rs  parser.rs  parsing.rs  regex.rs  rust.pest
syncdoc-core/tests/snapshots/: basic__generic_function.snap  basic__ignores_non_functions.snap  basic__impl_block_methods.snap  basic__impl_block_with_generics.snap  basic__module_with_functions.snap  basic__multiple_functions.snap  basic__single_function.snap  doc_injector_tests__async_function_doc.snap  doc_injector_tests__basic_doc_injection.snap  doc_injector_tests__const_function.snap  doc_injector_tests__function_with_generics.snap  doc_injector_tests__function_with_where_clause.snap  doc_injector_tests__multiple_attributes.snap  doc_injector_tests__pub_async_function_doc.snap  doc_injector_tests__unsafe_function_doc.snap  negative__basic_function_gets_documented.snap  negative__complex_edge_cases.snap  negative__function_returning_fn_type.snap  negative__function_with_fn_type_parameter.snap  negative__ignores_fn_in_comments.snap  negative__ignores_fn_in_string_literals.snap  negative__ignores_function_calls_in_expressions.snap  negative__ignores_type_alias_with_fn.snap  negative__trait_method_declarations.snap  negative__trait_with_default_method.snap  patterns__async_function.snap  patterns__basic_function.snap  patterns__const_function.snap  patterns__extern_c_function.snap  patterns__impl_block_methods.snap  patterns__mixed_content_with_functions.snap  patterns__pub_async_function.snap  patterns__pub_crate_function.snap  patterns__pub_function.snap  patterns__trait_methods.snap  patterns__unsafe_function.snap  token_processors_test__async_function_processing.snap  token_processors_test__basic_function_processing.snap  token_processors_test__complex_nested_structure.snap  token_processors_test__impl_block_path_construction.snap  (+6 more)
syncdoc-migrate/: CHANGELOG.md  Cargo.toml  README.md
syncdoc-migrate/src/: config.rs  debug.rs  discover.rs  extract.rs  lib.rs  report.rs  restore.rs  rewrite.rs  write.rs
syncdoc-migrate/src/discover/: tests.rs
syncdoc-migrate/src/extract/: extract_tests.rs
syncdoc-migrate/src/restore/: inject.rs
syncdoc-migrate/src/rewrite/: inject.rs  reformat.rs  rewrite_tests.rs  strip.rs  strip_tests.rs  tests.rs
syncdoc-migrate/src/rewrite/inject/: inject_tests.rs
syncdoc-migrate/src/rewrite/reformat/: bookend.rs  diff.rs  reformat_tests.rs
syncdoc-migrate/src/tests/: bookend.rs  discover.rs  expected.rs  extract.rs  inject.rs  mod.rs  reformat.rs  restore.rs  rewrite.rs  strip.rs  write.rs
syncdoc-migrate/src/tests/diff/: apply.rs  blank_lines.rs  doc_related.rs  helpers.rs  integration.rs  mod.rs  module_level.rs  preserve_non_doc.rs  restore_related.rs  roundtrip.rs  skip_transformed.rs  splitting.rs  whitespace.rs
syncdoc-migrate/src/write/: expected.rs  tests.rs
syncdoc-migrate/src/write/expected/: expected_tests.rs
syncdoc-migrate/tests/: helpers.rs  rewrite_integration.rs  touch_integration.rs  write_integration.rs
syncdoc-migrate/tests/snapshots/: rewrite_integration__annotate_enum_with_variants.snap  rewrite_integration__annotate_function.snap  rewrite_integration__annotate_impl_block.snap  rewrite_integration__annotate_module.snap  rewrite_integration__annotate_struct_with_fields.snap  rewrite_integration__annotate_trait.snap  rewrite_integration__annotate_with_module_level_docs.snap  rewrite_integration__complex_mixed_file.snap  rewrite_integration__empty_enum_body.snap  rewrite_integration__empty_struct.snap  rewrite_integration__module_doc_comment_strip_and_annotate.snap  rewrite_integration__strip_and_annotate_function.snap  rewrite_integration__strip_and_annotate_struct.snap  rewrite_integration__strip_enum_with_variant_docs.snap  rewrite_integration__strip_function_docs.snap  rewrite_integration__strip_module_level_docs.snap  rewrite_integration__strip_preserves_other_attrs.snap  rewrite_integration__strip_struct_with_field_docs.snap  rewrite_integration__tuple_struct.snap  rewrite_integration__tuple_struct_with_docs.snap  rewrite_integration__unit_struct.snap  rewrite_integration__unit_struct_strip.snap
syncdoc/src/: cli.rs  lib.rs
syncdoc/src/cli/: args.rs  logs.rs  orchestrate.rs  report.rs  worker.rs
syncdoc/tests/: cli_integration.rs
syncdoc/tests/roundtrip/: README.md  basic.rs  helpers.rs  issues.rs  main.rs
syncdoc/tests/roundtrip/snapshots/: roundtrip__basic__edit_plan_roundtrip_status.snap  roundtrip__basic__roundtrip_config-2.snap  roundtrip__basic__roundtrip_config.snap  roundtrip__basic__roundtrip_edit_plan-2.snap  roundtrip__basic__roundtrip_edit_plan.snap  roundtrip__basic__roundtrip_formats_difftastic-2.snap  roundtrip__basic__roundtrip_formats_difftastic.snap  roundtrip__basic__roundtrip_formats_markdown-2.snap  roundtrip__basic__roundtrip_formats_markdown.snap  roundtrip__basic__roundtrip_formats_parent-2.snap  roundtrip__basic__roundtrip_formats_parent.snap  roundtrip__basic__roundtrip_input-2.snap  roundtrip__basic__roundtrip_input.snap  roundtrip__issues__app_state_line_count_diff.snap  roundtrip__issues__app_state_line_diff.snap  roundtrip__issues__app_state_migrate_stderr.snap  (+11 more)
(+348 files in other folders)
