[workspace]
members = [
  "examples/syncdoc_enum",
  "examples/syncdoc_impl",
  "examples/syncdoc_module",
  "examples/syncdoc_struct",
  "examples/syncdoc_submodule",
  "syncdoc",
  "syncdoc-core",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lmmx/syncdoc"
rust-version = "1.82.0"

[workspace.dependencies]
syncdoc = { path = "syncdoc", version = "0.1.1" }
syncdoc-core = { path = "syncdoc-core", version = "0.1.1" }
insta = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
ropey = "1.6.1"
rust-format = { features = ["proc-macro2", "token_stream"], version = "0.3.4" }
tempfile = "3"
textum = "0.1.2"
unsynn = { default-features = false, version = "0.1.1" }
