[workspace]
members = [
  "examples/demo_cfg_attr_call",
  "examples/demo_cfg_attr_toml",
  "examples/demo_double_doc",
  "examples/demo_enum",
  "examples/demo_fn",
  "examples/demo_impl",
  "examples/demo_module",
  "examples/demo_struct",
  "examples/demo_submodule",
  "examples/demo_toml_path",
  "examples/migrate/demo_basic",
  "examples/migrate/demo_basic_migrated",
  "syncdoc",
  "syncdoc-core",
  "syncdoc-migrate",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lmmx/syncdoc"
rust-version = "1.82.0"

[workspace.dependencies]
facet = "0.30.0"
facet-args = "0.30.0"
insta = "1.0"
proc-macro2 = { features = ["span-locations"], version = "1.0" }
quote = "1.0"
ropey = "1.6.1"
rust-format = { features = ["proc-macro2", "token_stream"], version = "0.3.4" }
syncdoc = { path = "syncdoc", version = "0.2.3" }
syncdoc-core = { path = "syncdoc-core", version = "0.2.1" }
syncdoc-migrate = { path = "syncdoc-migrate", version = "0.2.2" }
tempfile = "3"
textum = "0.1.2"
unsynn = { default-features = false, version = "0.1.1" }
