[package]
description = "Core functionality for syncdoc - procedural macro implementation for documentation injection"
documentation = "https://docs.rs/syncdoc-core"
edition.workspace = true
homepage = "https://github.com/lmmx/syncdoc"
include = ["README.md", "src/**/*"]
license.workspace = true
name = "syncdoc-core"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version = "0.1.5"

[features]
default = []

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
ropey.workspace = true
textum.workspace = true
unsynn.workspace = true

[dev-dependencies]
insta.workspace = true
once_cell = "1.21.3"
pest = "2.8.3"
pest_derive = "2.8.3"
regex = "1.12.2"
rust-format.workspace = true
tempfile.workspace = true
