[package]
description = "Migration functionality for syncdoc - transferring code from docstrings to syncdoc"
documentation = "https://docs.rs/syncdoc-migrate"
edition.workspace = true
homepage = "https://github.com/lmmx/syncdoc"
include = ["README.md", "src/**/*"]
license.workspace = true
name = "syncdoc-migrate"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version = "0.1.5"

[features]
default = []

[dependencies]
syncdoc-core.workspace = true
proc-macro2.workspace = true
quote.workspace = true
# ropey.workspace = true
# textum.workspace = true
unsynn.workspace = true

[dev-dependencies]
# insta.workspace = true
# rust-format.workspace = true
tempfile.workspace = true
