[package]
description = "Migration functionality for syncdoc - transferring code from docstrings to syncdoc"
documentation = "https://docs.rs/syncdoc-migrate"
edition.workspace = true
homepage = "https://github.com/lmmx/syncdoc"
include = ["README.md", "src/**/*"]
license.workspace = true
name = "syncdoc-migrate"
publish = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version = "0.3.4"

[dependencies]
duct = "1.1.1"
imara-diff = "0.2.0"
proc-macro2.workspace = true
quote.workspace = true
syncdoc-core.workspace = true
unsynn.workspace = true

[dev-dependencies]
insta.workspace = true
rust-format.workspace = true
tempfile.workspace = true
