[package]
description = "Procedural macro attributes to inject documentation from external files"
documentation = "https://docs.rs/syncdoc"
edition.workspace = true
homepage = "https://github.com/lmmx/syncdoc"
include = ["README.md", "src/**/*"]
license.workspace = true
name = "syncdoc"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version = "0.1.5"

[features]
default = []

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
syncdoc-core = { workspace = true }

[dev-dependencies]
insta.workspace = true
rust-format.workspace = true
