[package]
edition = "2021"
name = "demo_cfg_attr_call"
publish = false
version = "0.1.5"

[package.metadata.syncdoc]
docs-path = "docs"

[dependencies]
syncdoc.workspace = true

# The `missing_docs` "rustdoc-specific lint" is rustc not rustdoc scoped!
# https://doc.rust-lang.org/rustdoc/lints.html#missing_docs
#
# So it cannot be set here when gating the #[doc = ...] codegen behind #[cfg_attr(doc, ...)]
#
# [lints.rust]
# missing_docs = "deny"
